force-app/main/default/objects/Agency_Information__c/fields/Notice_Resolution_Phone__c.field-meta.xml
<CustomField>
    <fullName>Notice_Resolution_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notice Resolution Phone Number</label>
    <type>Phone</type>
</CustomField>