force-app/main/default/objects/Agency_Information__c/fields/Open_Year_Amendment_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Open_Year_Amendment_Requirements__c</fullName>
    <label>Open Year Amendment Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>