force-app/main/default/objects/Agency_Information__c/fields/Payment_Method_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Method Details</label>
    <type>Checkbox</type>
</CustomField>