force-app/main/default/objects/Agency_Information__c/fields/PFMLEL_How_Are_Out_Of_State_EMPs_Treated__c.field-meta.xml
<CustomField>
    <fullName>PFMLEL_How_Are_Out_Of_State_EMPs_Treated__c</fullName>
    <label>How are out of state employees treated?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>