force-app/main/default/objects/Agency_Information__c/fields/PoA_Required__c.field-meta.xml
<CustomField>
    <fullName>PoA_Required__c</fullName>
    <label>Is POA required for filing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>