force-app/main/default/objects/Agency_Information__c/fields/Reporting_Requirement_For_W2_Box14__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirement_For_W2_Box14__c</fullName>
    <label>Reporting requirement for W-2 Box 14</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>