force-app/main/default/objects/Agency_Information__c/fields/Routing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Routing_Queue__c</fullName>
    <label>TaxRes Routing Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Rotation 1</fullName>
            </value>
            <value>
                <fullName>Rotation 1 - FUTA</fullName>
            </value>
            <value>
                <fullName>Rotation 2</fullName>
            </value>
            <value>
                <fullName>Rotation 2 - Fed WTH</fullName>
            </value>
            <value>
                <fullName>Rotation 3</fullName>
            </value>
            <value>
                <fullName>C-Queue</fullName>
            </value>
            <value>
                <fullName>Tax Ops Routing Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>