force-app/main/default/objects/Agency_Information__c/fields/SD_LOI_Required_Gusto_Signer__c.field-meta.xml
<CustomField>
    <fullName>SD_LOI_Required_Gusto_Signer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gusto Signer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>