force-app/main/default/objects/Agency_Information__c/fields/SD_MOU_Required_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>SD_MOU_Required_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>