force-app/main/default/objects/Agency_Information__c/fields/SFTR_Submission_Method_For_Testing__c.field-meta.xml
<CustomField>
    <fullName>SFTR_Submission_Method_For_Testing__c</fullName>
    <label>Submission Method for Testing</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>