force-app/main/default/objects/Agency_Information__c/fields/SOP_Link__c.field-meta.xml
<CustomField>
    <fullName>SOP_Link__c</fullName>
    <description>SOP links to confluence documents for agency information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SOP Link</label>
    <type>Url</type>
</CustomField>