force-app/main/default/objects/Agency_Information__c/fields/State_Non_Resident_Form__c.field-meta.xml
<CustomField>
    <fullName>State_Non_Resident_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Non-Resident Form</label>
    <type>Checkbox</type>
</CustomField>