force-app/main/default/objects/Agency_Information__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <description>Tax Ops field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>