force-app/main/default/objects/Agency_Information__c/fields/Timeframe_Requirement_For_NHRs__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_Requirement_For_NHRs__c</fullName>
    <label>Timeframe Requirement For NHRs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>