force-app/main/default/objects/Agency_Information__c/fields/UI_What_is_this_tax__c.field-meta.xml
<CustomField>
    <fullName>UI_What_is_this_tax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What is this tax?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>