force-app/main/default/objects/Agency_Information__c/fields/UPAI_Due_Diligence_Requirements_Info__c.field-meta.xml
<CustomField>
    <fullName>UPAI_Due_Diligence_Requirements_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due-Diligence Requirements &amp; Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>