force-app/main/default/objects/Agency_Information__c/fields/UPF_Holder_Reporting_Deadline__c.field-meta.xml
<CustomField>
    <fullName>UPF_Holder_Reporting_Deadline__c</fullName>
    <label>Holder Reporting Deadline</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>