force-app/main/default/objects/Agency_Information__c/fields/W_9_Information__c.field-meta.xml
<CustomField>
    <fullName>W_9_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>W-9 Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>