force-app/main/default/objects/Agency_Information__c/fields/WCAI_What_Is_The_Total_Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>WCAI_What_Is_The_Total_Fixed_Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What Is The Total Fixed Rate</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>