force-app/main/default/objects/Agency_Information__c/fields/WCEL_Eligibility_Information_Notes__c.field-meta.xml
<CustomField>
    <fullName>WCEL_Eligibility_Information_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WC Eligibility Information Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>