force-app/main/default/objects/Agency_Information__c/fields/What_Information_Is_Validated_Provided__c.field-meta.xml
<CustomField>
    <fullName>What_Information_Is_Validated_Provided__c</fullName>
    <label>What information is validated/provided?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EINs</fullName>
            </value>
            <value>
                <fullName>Rates</fullName>
            </value>
            <value>
                <fullName>Deposit Frequency</fullName>
            </value>
            <value>
                <fullName>Account Status</fullName>
            </value>
            <value>
                <fullName>Account Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>